--- a/web/index.html
+++ b/web/index.html
@@ -3,48 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome!</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      background-image: url("4.jpg"); /* Replace with your image path */
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-attachment: fixed;
-      display: flex;
-      min-height: 100vh;
-      align-items: center;
-      justify-content: center;
-    }
-    .container {
-      text-align: center;
-      padding: 2rem;
-      background-color: rgba(255, 255, 255, 0.8); /* Semi-transparent white background */
-      border-radius: 5px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-      font-size: 2rem;
-      margin-bottom: 1rem;
-    }
-    .button {
-      background-color: #3498db;
-      color: #fff;
-      padding: 1rem 2rem;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-  </style>
+  <title>Welcome to Beyond Words</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
+  <div class="navigation">
+    <a href="about.html"><button>About us</button></a>
+  </div>
   <div class="container">
-    <h1>Welcome!</h1>
-    <p>Get started with emotional analysis solutions.</p>
-    <a href="#" class="button">Get Started</a>
+    <h1>Welcome to Beyond Words</h1>
+    <p>Let's unlock the hidden language of emotions</p>
+    <p>At Beyond Words, we unlock the power of emotional analysis through audio and video. Our innovative technology delves deeper, uncovering the unspoken feelings hidden within conversations and interactions.</p>
+    <br/>
+    <a href="https://beyondwords20-bexpmsfbvcd3euxgcipvqk.streamlit.app/" class="button">Get Started</a>
   </div>
 </body>
 </html>
