--- a/web/index.html
+++ b/web/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
   <div class="navigation">
-    <a href="about.html"><button>About us</button></a>
+    <a href="about.html"><button>About us </button></a>
   </div>
   <div class="container">
     <h1>Welcome to Beyond Words</h1>
     <p>Let's unlock the hidden language of emotions</p>
     <p>At Beyond Words, we unlock the power of emotional analysis through audio and video. Our innovative technology delves deeper, uncovering the unspoken feelings hidden within conversations and interactions.</p>
     <br/>
-    <a href="https://beyondwords20-bexpmsfbvcd3euxgcipvqk.streamlit.app/" class="button">Get Started</a>
+    <a href="https://beyondwords.streamlit.app/" class="button">Get Started</a>
   </div>
 </body>
 </html>
